# spar

./: Cargo.toml  README.md
src/: ast.rs  de.rs  depgraph.rs  emit.rs  error.rs  evaluator.rs  formatter.rs  lexer.rs  lib.rs  loader.rs  main.rs  naming.rs  parser.rs  renderer.rs  resolver.rs  token.rs  typechecker.rs
src/tests/: ast_shape_tests.rs  depgraph_tests.rs  evaluator_tests.rs  mod.rs  parser_tests.rs  resolver_tests.rs  typechecker_tests.rs
