[package]
name = "spar"
version = "0.1.0"
edition = "2021"
description = "A statically typed configuration language that emits JSON and deserializes into Rust structs"
license = "MIT"
repository = "https://github.com/oraclevs/spar"
keywords = ["configuration", "config", "language", "json", "spar"]
categories = ["config", "parser-implementations", "command-line-utilities"]

[lib]
name = "spar"
path = "src/lib.rs"

[[bin]]
name = "spar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

